--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Don Blog # 你的博客名字，可以定义修订
+title: NotGeek,But uphold Geek # 你的博客名字，可以定义修订
 header-img: "img/green.jpg"
 tagline: "cn"  
-description: "desc"  # 一句话描述你的博客
+description: "一名崇尚Geek精神的普通IT菜鸟"  # 一句话描述你的博客
 baseurl: ""
 url: "https://gaoy13800.github.io"  # 此处填写你的博客地址 
 
@@ -17,9 +17,9 @@ gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 
 douban_username:  # 你的豆瓣id
-twitter_username: 
+twitter_username: gaoy13800
 github_username: gaoy13800
-facebook_username: 
+facebook_username: 高杨
 weibo_username: 爱吃橙子的公瑾
 zhihu_username: 收一伞烟雨
 
