--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ owner:
 gavatar: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 
-douban_username:  # 你的豆瓣id
+douban_username:  no
 twitter_username: gaoy13800
 github_username: gaoy13800
 facebook_username: 高杨
