--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: NotGeek,But uphold Geek # 你的博客名字，可以定义修订
+title: Gaoy Blog# 你的博客名字，可以定义修订
 header-img: "img/green.jpg"
 tagline: "cn"  
 description: "一名崇尚Geek精神的普通IT菜鸟"  # 一句话描述你的博客
