--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ favicon: img/favicon.png # 浏览器地址栏小图标，可自定义更改
 douban_username:  no
 twitter_username: gaoy13800
 github_username: gaoy13800
+resume_url: 我的简历
 facebook_username: 高杨
 weibo_username: 爱吃橙子的公瑾
 zhihu_username: 收一伞烟雨
